Fixed minor spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ h4 {
     color: var(--grey);
     font-size: 1.1rem;
     font-weight: 200;
+    line-height: 0.8rem;
     padding: 0 2rem;
     text-align: center;
     text-transform: uppercase;
@@ -597,17 +598,17 @@ main {
 
 
 .flickr-square-grid {
-    align-items: stretch;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: stretch;
-    width: 100%;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: repeat (4, autofill);
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 7px;
+    width: 100%
 }
 
 .flickr-square { /* TODO: MAKE RESPONSIVE *****************/
     background-color:var(--darkest-grey);
     height: 50px;
-    margin: 2px;
     width: 50px;
 }
 
